test_suite5/ALAN/test_suite/alan-2022-examples/failing/004160_mutation.alan
source S40Fa begin leave - < 661 end
